work on javascript challenge series and  solution on challenges......

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>javascript challenges series solution</h1>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/Solution.js"></script>
   </body>
 </html>
