access javascript  solution on "console.log()"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>javascript challenges series solution</h1>
+    <p>Access all javascript solution on <b>console .log </b></p>
     <script type="module" src="/Solution.js"></script>
   </body>
 </html>
